--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.1",
